implementacion de carrusel

--- a/humaya/index.html
+++ b/humaya/index.html
@@ -161,39 +161,22 @@
       <div class="productos">
         <h2>RECETAS</h2>
       </div>
-      <section class="container-card">
-        <div class="card">
-          <div class="card-img"><img src="img/conitos.jpg" alt="" /></div>
-          <div class="card-info">
-            <h3>CONITOS</h3>
-            <p>
-              Una deliciosa opción para acompañar las meriendas, ese antojo de
-              media nocheo compartir con amigos
-            </p>
-            <button>PREPARACIÓN</button>
+      <section>
+        <div class="contenedor-indicadores">
+        <div class="indicadores"></div>
+      </div>
+        <div class="contenedor-principal">
+          <button id="flecha-izquierda" class="flecha-izquierda">
+            <i class="fa-solid fa-chevron-left"></i>
+          </button>
+          <div class="container-carrusel">
+            <div class="container-card" id="container-card">
+              
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="card-img"><img src="img/pepas.jpg" alt="" /></div>
-          <div class="card-info">
-            <h3>PEPAS</h3>
-            <p>
-              Las galletitas mas tiernas y ricas, rellenas de dulce de leche,
-              ideales para el mate y la hora del té
-            </p>
-            <button>PREPARACIÓN</button>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-img"><img src="img/torta.jpg" alt="" /></div>
-          <div class="card-info">
-            <h3>TORTA NUTT</h3>
-            <p>
-              La torta de tres capas mas sabrosas del mundo, combina una base de
-              vainilla, dulce de leche y cubierta de choconutt
-            </p>
-            <button>PREPARACIÓN</button>
-          </div>
+          <button id="flecha-derecha" class="flecha-derecha">
+            <i class="fa-solid fa-chevron-right"></i>
+          </button>
         </div>
       </section>
       <div class="productos">
