Funcionalidad de botones en cards

--- a/humaya/index.html
+++ b/humaya/index.html
@@ -48,29 +48,61 @@
           <div class="container-img-banner">
             <img src="img/Producto1.png" alt="" />
           </div>
-          <div class="container-card-banner">
-            <h3>DULCE DE LECHE TRADICIONAL</h3>
-            <div class="container-parrafo">
-              <p>
-                Elaboración artesanal de principio a fin, con un sabor intenso,
-                receta tradicional
-              </p>
-              <p>Presentación en frasco de vidrio de 580gr.</p>
+          <div class="container-gral-banner">
+            <div class="container-card-banner">
+              <h3>DULCE DE LECHE TRADICIONAL</h3>
+              <div class="container-parrafo">
+                <p>
+                  Elaboración artesanal de principio a fin, con un sabor
+                  intenso, receta tradicional
+                </p>
+                <p>Presentación en frasco de vidrio de 580gr.</p>
+              </div>
+              <div class="banner-btn">
+                <button id="btn-info">+ INFO</button>
+              </div>
             </div>
-            <div class="banner-btn"><button>+ INFO</button></div>
+            <div class="return hide">
+              <h1>Ingredientes para un frasco de 580gr</h1>
+              <ul>
+                <li>Leche entera de 1ra calidad</li>
+                <li>Azucar refinada</li>
+                <li>Esencia de vainilla</li>
+                <li>Bicarbonato de sodio</li>
+              </ul>
+              <div class="cont-btn-return">
+                <button id="btn-reset">Volver</button>
+              </div>
+            </div>
           </div>
         </article>
         <article>
-          <div class="container-card-banner">
-            <h3>DULCE DE LECHE SIN AZÚCAR</h3>
-            <div class="container-parrafo">
-              <p>
-                Elaboración artesanal para cuidar su silueta sin renunciar a
-                nada, endulzado naturalmente con stevia.
-              </p>
-              <p>Presentación en frasco de vidrio de 580 y 280gr.</p>
+          <div class="container-gral-banner">
+            <div class="container-card-banner">
+              <h3>DULCE DE LECHE SIN AZÚCAR</h3>
+              <div class="container-parrafo">
+                <p>
+                  Elaboración artesanal para cuidar su silueta sin renunciar a
+                  nada, endulzado naturalmente con stevia.
+                </p>
+                <p>Presentación en frasco de vidrio de 580 y 280gr.</p>
+              </div>
+              <div class="banner-btn">
+                <button id="btn-info">+ INFO</button>
+              </div>
             </div>
-            <div class="banner-btn"><button>+ INFO</button></div>
+            <div class="return">
+              <h1>Ingredientes para un frasco de 580gr</h1>
+              <ul>
+                <li>Leche descremada de 1ra calidad</li>
+                <li>Endulcorante Stevia o de su preferencia</li>
+                <li>Esencia de vainilla</li>
+                <li>Bicarbonato de sodio</li>
+              </ul>
+              <div class="cont-btn-return">
+                 <button id="btn-reset">Volver</button>
+              </div>
+            </div>
           </div>
           <div class="container-img-banner">
             <img src="img/Producto2.png" alt="" />
@@ -80,17 +112,35 @@
           <div class="container-img-banner">
             <img src="img/Producto3.png" alt="" />
           </div>
-          <div class="container-card-banner">
-            <h3>DULCE CHOCONUTT</h3>
-            <div class="container-parrafo">
-              <p>
-                Elaboración artesanal para el capricho dulce, combinación de
-                dulce de leche, chocolate y pasta de avellanas. Una delicia
-                única
-              </p>
-              <p>Presentación en frasco de vidrio de 280gr.</p>
+          <div class="container-gral-banner">
+            <div class="container-card-banner">
+              <h3>DULCE CHOCONUTT</h3>
+              <div class="container-parrafo">
+                <p>
+                  Elaboración artesanal para el capricho dulce, combinación de
+                  dulce de leche, chocolate y pasta de avellanas. Una delicia
+                  única
+                </p>
+                <p>Presentación en frasco de vidrio de 280gr.</p>
+              </div>
+              <div class="banner-btn">
+                <button id="btn-info">+ INFO</button>
+              </div>
             </div>
-            <div class="banner-btn"><button>+ INFO</button></div>
+            <div class="return">
+              <h1>Ingredientes para un frasco de 580gr</h1>
+              <ul>
+                <li>Leche de coco en polvo</li>
+                <li>Azucar rubia</li>
+                <li>Agua</li>
+                <li>Bicarbonato de sodio</li>
+                <li>Colorante: caramelo</li>
+              </ul>
+              <div class="cont-btn-return">
+                <button id="btn-reset">Volver</button>
+              </div>
+              
+            </div>
           </div>
         </article>
         <div class="banner-end">
@@ -163,16 +213,14 @@
       </div>
       <section>
         <div class="contenedor-indicadores">
-        <div class="indicadores"></div>
-      </div>
+          <div class="indicadores"></div>
+        </div>
         <div class="contenedor-principal">
           <button id="flecha-izquierda" class="flecha-izquierda">
             <i class="fa-solid fa-chevron-left"></i>
           </button>
           <div class="container-carrusel">
-            <div class="container-card" id="container-card">
-              
-            </div>
+            <div class="container-card" id="container-card"></div>
           </div>
           <button id="flecha-derecha" class="flecha-derecha">
             <i class="fa-solid fa-chevron-right"></i>
@@ -221,5 +269,5 @@
     src="https://kit.fontawesome.com/6fe6321916.js"
     crossorigin="anonymous"
   ></script>
-  <script src="js/index.js"></script>
+  <script defer src="js/index.js"></script>
 </html>
