--- a/humaya/index.html
+++ b/humaya/index.html
@@ -100,7 +100,7 @@
                 <li>Bicarbonato de sodio</li>
               </ul>
               <div class="cont-btn-return">
-                 <button id="btn-reset">Volver</button>
+                <button id="btn-reset">Volver</button>
               </div>
             </div>
           </div>
@@ -139,7 +139,6 @@
               <div class="cont-btn-return">
                 <button id="btn-reset">Volver</button>
               </div>
-              
             </div>
           </div>
         </article>
@@ -259,6 +258,17 @@
           </div>
           <div class="menu">
             <p>UBICACIÓN</p>
+            <a href=""
+              ><iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13135.09473914999!2d-58.40043909603653!3d-34.609883896514546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1694267543521!5m2!1ses-419!2sar"
+                width="150"
+                height="150"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe
+            ></a>
           </div>
         </div>
       </section>
