implementacion de api

--- a/humaya/index.html
+++ b/humaya/index.html
@@ -62,7 +62,7 @@
                 <button id="btn-info">+ INFO</button>
               </div>
             </div>
-            <div class="return hide">
+            <div class="return ">
               <h1>Ingredientes para un frasco de 580gr</h1>
               <ul>
                 <li>Leche entera de 1ra calidad</li>
